test/fail/entitynulltype.app
// Type not defined 
application test

section datamodel

  entity User {
    authoredPapers :: Null
  }
